# ROMA

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GITHUB_SYNC_GUIDE.md  LICENSE  LOCAL_SETUP_GUIDE.md  Makefile  README.md  REFACTORING_SUMMARY.md  SECURITY.md  fastapi_server.py  flow.txt  multiprocessing_helper.py  output.txt  pyproject.toml  pytest.ini  quick-start.sh  quickstart.sh  run_server_v2.py  seal_0_salah_trial.csv  sentient.yaml  setup.sh  setup_native.sh  simple_tools_example.py  test.ipynb  test_agent_factory.py  test_complete_blueprint_system.py  test_config_system.py  test_integration.py  test_max_depth.py  test_structured_output.py
.agent_cache/: cache_index.json
.agent_executions/: exec_33171f9e.json  exec_3aa1bef5.json  exec_3b03d537.json  exec_a2473810.json  exec_a75c5589.json
.agent_projects/: projects.json
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.frontend  Makefile  README.md  docker-compose.s3.yml  docker-compose.yml  setup.sh  startup.sh
docs/: AGENTS_GUIDE.md  AGENT_SYSTEM.md  API_REFERENCE.md  ARCHITECTURE.md  COMMUNITY.md  CONFIGURATION.md  CORE_CONCEPTS.md  DETAILED_EXECUTION_FLOW.md  EXECUTION_FLOW.md  GETTING_STARTED.md  INTRODUCTION.md  QUICKSTART.md  QUICKSTART_COOKBOOK.md  README.md  ROADMAP.md  SETUP.md  UNIFIED_CONFIGURATION.md  USE_CASES.md
emergency_backups/: 690567ff-5394-413c-a3c6-4b0c9c462a7f_20250614_141056_emergency.json  e3c1173d-ae24-4884-afc0-ad1797d160fd_20250614_223858_emergency.json
evals/: evaluation.py  extract_final_answer.py  grade_answers_simple.py  grader.py  (+5 more)
(+324 files in other folders)
