[project]
name = "SentientResearchAgent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "salzubi401", email = "salaheddin@sentient.xyz"},
]
dependencies = ["pydantic>=2.11.4", "loguru>=0.7.3", "networkx>=3.4.2", "agno>=1.4.6", "duckduckgo-search>=8.0.1"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
