[project]
name = "SentientResearchAgent"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "salzubi401", email = "salaheddin@sentient.xyz"},
]
dependencies = [
"pydantic>=2.11.4",
 "loguru>=0.7.3",
 "networkx>=3.4.2",
 "agno>=1.8,<2.0",
 "duckduckgo-search>=8.0.1",
 "flask>=3.1.1",
 "Flask-CORS>=5.0.1",
 "markdown-pdf>=1.7",
 "rich>=14.0.0",
 "flask-socketio>=5.5.1",
 "eventlet>=0.40.0",
 "omegaconf>=2.3.0",
 "pytest>=8.4.0",
 "ipykernel>=6.29.5",
 "pytest-asyncio>=1.0.0",
 "litellm>=1.72.6",
 "pandas>=2.3.0",
 "google-genai>=1.20.0",
 "wikipedia>=1.4.0",
 "wikipedia-api>=0.8.1",
 "datasets>=4.0.0",
 "exa-py>=1.14.16",
 "pyarrow>=16.1.0",
 "httpx>=0.27.0",
 "json-repair>=0.48.0",
 "e2b-code-interpreter>=2.0.0",
 "e2b>=2.0.0"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
